refactor: migrate from LocalDateTime to Instant and improve time handling
This commit introduces several significant improvements to the backend's time handling and repository operations:

1. Replaced all LocalDateTime usage with Instant for better timezone handling and consistency:
   - Updated all model entities (Clinic, Patient, Payment, etc.) to use Instant
   - Modified all DTOs to use Instant instead of LocalDateTime
   - Adjusted repository queries to work with Instant

2. Enhanced repository operations:
   - Added new query methods for time-based filtering using Instant
   - Improved performance by moving filtering logic to database queries
   - Added native query variants for better performance in some cases

3. Refactored time-based business logic:
   - Updated PatientService, PaymentService, and ReportService to use Instant
   - Improved workday handling (6AM-6AM) with proper timezone support
   - Added helper methods for workday date calculations

4. Frontend improvements:
   - Enhanced CurrentPatient component with better queue handling
   - Improved file upload operations with optimistic updates
   - Added better error handling and state management

5. Testing:
   - Added comprehensive tests for PatientService time-based operations
   - Test cases cover various time scenarios (before/after 6AM)

6. Database schema changes:
   - Updated table names to use plural form (queues, payments, etc.)
   - Added proper indexes for time-based queries

The changes provide more reliable time handling across timezones and improve performance by moving time-based filtering to the database level.